# playwright-webrun

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: main.py
app/core/: config.py  lifecycle.py  logger.py  ratelimiter.py
app/page/v1/controllers/: routes.py
app/page/v1/models/: logs.py
app/page/v1/services/: network_logs.py  page_content.py  web_scrap.py
app/page/v2/controllers/: routes.py
app/page/v2/services/: network_logs.py  page_content.py
app/playwright/: browser.py
