[project]
name = "playwright-webrun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.120.4",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "playwright>=1.55.0",
    "playwright-stealth==1.0.6",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "redis[hiredis]>=7.0.1",
    "sentry-sdk>=2.43.0",
    "setuptools>=80.9.0",
    "slowapi>=0.1.9",
    "trafilatura>=2.0.0",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
